--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Supernatural Archive</title>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -10,25 +10,21 @@
 
     <div class="main-container">
         <div class="top-nav">
-            <input type="text" id="epSearch" placeholder="Search episode name...">
+            <input type="text" id="epSearch" placeholder="Search episode...">
             <div id="searchResults" class="results-box"></div>
+
+            <div class="player-controls">
+                <select id="seasonSelect"><option value="">Season</option></select>
+                <select id="episodeSelect" disabled><option value="">Episode</option></select>
+                <button id="fullscreenBtn">⛶ FULL</button>
+            </div>
         </div>
 
         <div id="videoWrapper">
-            <div id="videoContainer">
-                </div>
+            <div id="videoContainer"></div>
         </div>
 
-        <div class="player-controls">
-            <select id="seasonSelect">
-                <option value="">Season</option>
-            </select>
-            <select id="episodeSelect" disabled>
-                <option value="">Episode</option>
-            </select>
-            <button id="fullscreenBtn">⛶ FULLSCREEN</button>
-            <button id="nextBtn">NEXT →</button>
-        </div>
+        <button id="nextBtn">NEXT EPISODE →</button>
     </div>
 
     <script src="script.js"></script>
