--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
             <div id="videoContainer"></div>
         </div>
 
-        <button id="nextBtn">NEXT EPISODE →</button>
+        <div style="text-align: center; padding-bottom: 40px;">
+            <button id="nextBtn">NEXT EPISODE →</button>
+        </div>
     </div>
 
     <script src="script.js"></script>
