--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Supernatural Archive</title>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -16,7 +16,7 @@
             <div class="player-controls">
                 <select id="seasonSelect"><option value="">Season</option></select>
                 <select id="episodeSelect" disabled><option value="">Episode</option></select>
-                <button id="fullscreenBtn">⛶ FULL</button>
+                <button id="fullscreenBtn">⛶ FULLSCREEN</button>
             </div>
         </div>
 
@@ -24,7 +24,7 @@
             <div id="videoContainer"></div>
         </div>
 
-        <div style="text-align: center;">
+        <div style="text-align: center; padding-bottom: 40px;">
             <button id="nextBtn">NEXT EPISODE →</button>
         </div>
     </div>
